test/expected/en_ns_c.out
enum E; namespace E { class C; }
           ^
12: error: "E" was previously declared as enum:
> enum E;
